# jmopenorders

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .hound.yml  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .yamllint.yml  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  README.rst  codecov.yml  cspell.config.yaml  lgtm.yml  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_test.txt  ruff.toml  ruff_defaults.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/linters/: .commit-lint.yml
.github/workflows/: auto-merge.yml  build.yml  changelog_validate.yml  codacy-analysis.yml  codeql-analysis.yml  codespell.yml  commit-lint.yml  constraints.txt  dependabot-merge.yml  labeler.yml  misspell-fixer.yml  pre-commit.yml  release-drafter.yml  release-notes.yml  release.yml  stale.yml  tests.yml
docker/: README.md  docker-compose.yml
docs/: codeofconduct.rst  conf.py  contributing.rst  index.rst  license.rst  reference.rst  requirements.txt  usage.rst
recipe/: conda_build_config.yaml  meta.yaml
src/jmopenorders/: __init__.py  __main__.py
src/jmopenorders/api/: __init__.py  cleanoutputdir.py  generateorders.py  getdata.py  getserviceperson.py  report.py
src/jmopenorders/core/: config.py  logger.py
tests/: __init__.py  test_generate_data.py  test_main.py
