# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject

[tool.poetry]
name = "jmopenorders"
version = "0.2.9"
description = "a generator to generate infos for the affected persm ons"
authors = ["Jürgen Mülbert <juergen.muelbert@gmail.com>"]
license = "EUPL-1.2"
readme = "README.rst"
homepage = "https://github.com/jmuelbert/jmopenorders"
repository = "https://github.com/jmuelbert/jmopenorders"
documentation = "https://jmopenorders.readthedocs.io"
packages = [
  { include = "jmopenorders", from = "src" }
]
# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["jmopenorders", "excel", "convert" ]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business",
]

[tool.poetry.urls]
Changelog = "https://github.com/jmuelbert/jmopenorders/releases"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
openpyxl = "^3.0.4"
python-dotenv = ">=0.19,<0.21"
PyYAML = ">=5.4.1,<7.0.0"


[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.3"}
pytest = "^7.1.1"
safety = "^1.10.3"
mypy = "^0.942"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^4.3.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.18.1"
black = "^22.3"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.3.23"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^3.1.0"
pre-commit-hooks = "^4.2.0"
faker = "^13.3.4"
sphinx-click = "^4.0.0"
Pygments = "^2.11.2"
openpyxl-stubs = "^0.1.21"
types-PyYAML = "^6.0.4"
types-setuptools = "^57.4.12"
types-toml = "^0.10.3"
typing-extensions = "^4.1.1"
pydocstyle = "^6.1.1"
pyupgrade = "^2.32.0"
furo = ">2021.11.12"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]

reportMissingImports = true
reportMissingTypeStubs = false

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
jmopenorders = "jmopenorders.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["jmopenorders"]

[tool.coverage.report]
show_missing = true
fail_under = 33

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "openpyxl.worksheet.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
